// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request tests bad request unchecked 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;

exports[`request tests basic bad request 2`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;

exports[`request tests basic ok 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with basic auth 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "Authorization": "Basic dXNlcm5hbWU6dGVzdC1wYXNzd29yZA==",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with bearer auth 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "Authorization": "Bearer test-token",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with lots of options 1`] = `
[
  [
    "https://server/path?hello=world&foo=bar#hashed",
    {
      "headers": {},
      "method": "GET",
      "redirect": true,
    },
  ],
]
`;

exports[`request tests ok with no logging 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {},
      "method": "GET",
    },
  ],
]
`;
